--- a/template.html
+++ b/template.html
@@ -97,6 +97,7 @@ All rights reserved.
       </ul>
     </li>
     <li><a href="%(basepath)sdonate.html">donate</a></li>
+    <li><a href="%(basepath)sgivejob.html">give me a job?</a></li>
 </ul>
 </div><!--/.nav-collapse -->   
 </div>
