modified:   identity_server.md 	modified:   install.md

--- a/template.html
+++ b/template.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="canonical" href="http://bitdust.io">
+    <link rel="canonical" href="https://bitdust.io">
     
     <title>%(title)s</title>
 
@@ -68,7 +68,7 @@
 <!--
 Using web site, software and other products
 branded  <b>BitDust</b> means agree with the
-<a href="http://bitdust.io/license.html"> license agreement </a>.
+<a href="https://bitdust.io/license.html"> license agreement </a>.
 -->
 All rights reserved.
 </div>
