updated url from http to https://gitlab.bitdust.io

--- a/template.html
+++ b/template.html
@@ -121,7 +121,7 @@ All rights reserved.
                             <li><a href="%(basepath)ssecurity.html">Security</a></li>
                             <li><a href="%(basepath)sidentities.html">Independence</a></li>
                             <li><a href="%(basepath)sstorage.html">Fairness</a></li>
-                            <li><a href="http://gitlab.bitdust.io/groups/devel">Open Source</a></li>
+                            <li><a href="https://gitlab.bitdust.io/groups/devel">Open Source</a></li>
                             <li><a href="https://www.facebook.com/bitdust">Good Team</a></li>
                             <li><a href="%(basepath)sroadmap.html">Big Plans!</a></li>
                         </ul>
