updated api, intro, fixes

--- a/template.html
+++ b/template.html
@@ -168,7 +168,7 @@ All rights reserved.
     </nav>
 </div>
 
-<div class="overlay" title="окно"></div>
+<div class="overlay" title="window"></div>
 <div class="popup">
     <div class="close_order">x</div>
     <div class="feedback_alert text-left"></div>
